--- a/index.html
+++ b/index.html
@@ -49,6 +49,36 @@
             </div>
         </div>
     </section>
+    <hr class="top">
+    <!-- icons section start with border -->
+    <section class="icons">
+        <div class="svg-icons">
+            <img class="illustration" src="images/logos/Alibaba.svg" alt="alibaba logo">
+            <img class="illustration" src="images/logos/Amazon.svg" alt="Amazon">
+            <img class="illustration" src="images/logos/Daraz.pk Logo.svg" alt="daraz">
+            <img class="illustration" src="images/logos/Ebay.svg" alt="ebay">
+            <img class="illustration" src="images/logos/Rakuten.svg" alt="Rakuten">
+            <img class="illustration" src="images/logos/Target.svg" alt="target">
+            <img class="illustration" src="images/logos/Walmart.svg" alt="Walmart">
+
+        </div>
+
+    </section>
+    <hr class="bottom">
+    <!-- icons section end with border -->
+    <!-- main products starts -->
+    <main>
+        <section class="">
+
+
+
+
+
+        </section>
+    </main>
+
+
+
 
 </body>
 
